# aiven-examples

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  go.mod  go.sum  requirements.txt  test-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md  report.md  request.md
azure-vnet-peering/: create_peering.sh
cassandra/csharp/: Program.cs  README.md
cassandra/go/: README.md  cassandra_example.go  main.go  read.go  write.go
cassandra/java/: README.md  build.gradle  gradlew.bat
cassandra/nodejs/: README.md  index.js  package.json
cassandra/python/: README.md  cassandra_example.py  main.py  read.py  write.py
demos/reddit-comment-analysis/: Runbook.md
elasticsearch/go/: README.md  elasticsearch_example.go  elasticsearch_person_example.go  elasticsearch_reddit_example.go  go.mod  go.sum  index.go  main.go
elasticsearch/python/: README.md  index.py  main.py
flink-kafka/src/: consumer.py  requirements.txt
flink-kafka/terraform/: flinkdemo.tf  variables.tf
influxdb/go/: READEME.md  influxdb_example.go  main.go  read.go  write.go
influxdb/nodejs/: README.md  example.js  index.js  package.json
kafka/cc/: .gitignore  CMakeLists.txt  README.md  avn_KafkaConsumer_Simple.cc  avn_KafkaProducer_Simple.cc  ccexample.env  ccexample.sh  config.hh
kafka/go/: README.md  (+5 more)
pg-sync/: README.md
scripts/: public-service-list.sh  save-certs.sh  save-token.sh
solutions/: README.rst
terraform/: .gitignore  .terraform.lock.hcl  Makefile  README.md  main.tf  terraform.tfvars  variables.tf
tests/: __init__.py  test_aiven_examples.py
(+584 files in other folders)
